js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-block-import-call-unknown.js
DONOTEVALUATE
(
)
;
{
import
.
UNKNOWN
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
;
